made a sidebar for the blog pages and fixed a few layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -718,8 +718,9 @@ input[type="button"],
         padding-top: 1em;
         border-top: 1px solid;
         border-color: rgba(192, 192, 192, 0.15);
-        text-align: center;
-        color: inherit;
+        text-align: left;
+        color: #999999;
+        font-size: 9pt;
     }
 
     #footer a {
